added game over and play again and trying to make element reappear

--- a/gameover.html
+++ b/gameover.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1> Score: <span id="counter">0</span></h1>
-    <h2> Time: <span id="timer">120</span></h2>
+    <h2> Game Over! <br>
+    <a href="./index.html">Play Again</a></h2>
     <div id="board"></div>
 
+    
 
-    <script src="script.js"></script>
 </body>
 
 </html>
