--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-    <h1> Score: <span id="counter">0</span></h1>
-    <h2> Time: <span id="timer">120</span></h2>
-    <div id="board"></div>
+    <div id="board">
+    <h1>Click on it!</h1>
+    <h2> Time: <span id="timer">120</span></h2> <h2> Score: <span id="counter">0</span></h2>
+    </div>
 
 
     <script src="script.js"></script>
