--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div id="board">
     <h1>Click on it!</h1>
-    <h2> Time: <span id="timer">120</span></h2> <h2> Score: <span id="counter">0</span></h2>
+    <button id="start"> Start!</button>
+    <h2> Time: <span id="timer">120</span></h2>
+    <h2> Score: <span id="counter">0</span></h2>
     </div>
 
 
