--- a/gameover.html
+++ b/gameover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <h1> Score: <span id="counter">0</span></h1>
@@ -13,7 +13,7 @@
     <div id="board"></div>
 
     
-
+    <script src="./script.js"></script>
 </body>
 
 </html>
