--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
-<body>
+<body id="body">
     <div id="board">
     <h1>Click on it!</h1>
-    <button id="start"> Start!</button>
+    <button id="start"> Start</button>
     <h2> Time: <span id="timer">120</span></h2>
     <h2> Score: <span id="counter">0</span></h2>
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
