fixed gameover and score

--- a/gameover.html
+++ b/gameover.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <h1> Score: <span id="counter">0</span></h1>
-    <h2> Game Over! <br>
+    <div id="board">
+    <h1> Game Over!</h1>
+    <h2> Score: <span class="counter">0</span><br>
     <a href="./index.html">Play Again</a></h2>
-    <div id="board"></div>
+    </div>
 
     
-    <script src="./script.js"></script>
+    <script src="./gameover.js"></script>
 </body>
 
 </html>
