--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div id="board">
     <h1>Click on it!</h1>
     <button id="start"> Start</button>
-    <h2> Time: <span id="timer">120</span></h2>
-    <h2> Score: <span id="counter">0</span></h2>
+    <h2> Time: <span id="timer">60</span> seconds</h2>
+    <h2> Score: <span class="counter">0</span></h2>
     </div>
 
 
