--- a/gameover.html
+++ b/gameover.html
@@ -9,8 +9,10 @@
 <body>
     <div id="board">
     <h1> Game Over!</h1>
-    <h2> Score: <span class="counter">0</span><br>
-    <a href="./index.html">Play Again</a></h2>
+    <h2> Score: <span class="counter">0</span></h2>
+
+    <h1><a href="./index.html">Play Again</a></h1>
+    <div id="foto-nanas"></div>
     </div>
 
     
