--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="body">
     <div id="board">
-    <h1>Click on it!</h1>
+    <h1>Click on them!</h1>
     <button id="start"> Start</button>
     <h2> Time: <span id="timer">60</span> seconds</h2>
     <h2> Score: <span class="counter">0</span></h2>
